Fixed dog panel spacing on the mobile devices

--- a/assets/scss/_modules.scss
+++ b/assets/scss/_modules.scss
@@ -880,7 +880,7 @@
         background-color: $color-cyan-bright;
         border-radius: 6px;
         margin-bottom: 30px;
-        padding: 30px;
+        padding: 20px 30px 20px 20px;
         position: relative;
         transition: color .25s ease, border-color .25s ease, background-color .25s ease;
 
